# semantic_rag_assessment

./: .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  retrieval_benchmark.md
.github/workflows/: ci.yml
src/: __init__.py  bm25.py  cache.py  chunker.py  cli.py  data.py  embedding.py  eval.py  persistence.py  pipeline.py  query_expansion.py  reranker.py  significance.py  storage.py  timing.py
tests/: conftest.py  test_bm25.py  test_cache.py  test_chunker.py  test_cli.py  test_embedding.py  test_eval.py  test_persistence.py  test_pipeline.py  test_query_expansion.py  test_reranker.py  test_significance.py  test_storage.py
